prevent dark mode conflict with .dark color class
fixes exception case, where user has dark mode by default but wants to see the html.dark color class too.

--- a/LTS-flex-theme.css
+++ b/LTS-flex-theme.css
@@ -5,7 +5,7 @@ This is a working develeopment file for human readability.
 Use the CSS optimizer to reduce file size for published websites or apps.
 
 -++ LTS Flex CSS Theme websites and HTML apps.  +++-
---- Original author	:: Nik K. linkedin.com/in/nik--k---/    (  5.Jan 2020). 
+--- Original author	:: Nik K. linkedin.com/in/nik--k---/   (19.April.2020). 
 --- Code adoption 	:: YourName    (date).
 --- License	      	:: GNU General Public License v 3.0.
 --- Latest version	:: github.com/Dorson/LTS-flex-css-style-theme-generator
@@ -33,7 +33,7 @@ exceptional cases below. Computers use the last mentioned CSS setting.
 
 @media screen and (prefers-color-scheme: dark) {
 
- html:not(.snow-white) {
+ html:not(.snow-white):not(.dark) {
   --color-html: #0e0b0b ;
   --color-body: #1a1010 ;
   --color-text: #d1d1d1 ;
@@ -191,7 +191,7 @@ form *{
 /* GLOBAL COLORS that were not set before. */
 
 
-form {background-color: rgba(240, 240, 240, 0.1) ;}
+form { background-color: rgba(240, 240, 240, 0.1) ; }
 
 
 button , input[type=submit] {
